# weather-station

./: .gitignore
backend/: pyproject.toml  run.py
backend/app/: __init__.py  config.py  functions.py  mqtt.py  views.py
backend/scripts/: backfill_recorded_at.py  seed_historical_weather.py
frontend/: components.d.ts  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  main.js  style.css
frontend/src/composables/: useAnalysisView.js  useLiveCharts.js  useLiveMetricCards.js  useLiveStream.js
frontend/src/lib/: analysisMetrics.js  api.js  liveChartGroups.js  metricFormatting.js
frontend/src/router/: index.js
frontend/src/stores/: appStore.js  mqttstore.js
frontend/src/views/: Analysis.vue  LiveGraphs.vue  LiveReadings.vue
hardware/: hardware.ino
