[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-station-backend"
version = "0.1.0"
description = "Flask MQTT ingestion backend for the weather station project."
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0,<4.0.0",
    "paho-mqtt>=2.1.0,<3.0.0",
    "pymongo>=4.8.0,<5.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
]

[tool.setuptools.packages.find]
include = ["app*"]